examples/fail/semantic/assign_to_let.bina
// EXPECT_SEMANTIC_ERROR: assignment to immutable value
fn main() -> int {
    let x = 1;
    x = 2;
    return 0;
}
